fix: changed flex behaviour on small screen

--- a/src/pages/games/styles/game-page.css
+++ b/src/pages/games/styles/game-page.css
@@ -264,4 +264,7 @@ body {
     .rating-wrapper {
         flex-direction: column;
     }
+    .ratings {
+        margin-left: unset;
+    }
 }
